feat: add declarative management of PostgreSQL logical replication (#5329)
This pull request adds a feature for managing PostgreSQL logical
replication through a declarative method by introducing two new
Kubernetes CRDs: Publications and Subscriptions.

Closes #5567 

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@gmail.com>
Signed-off-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>
Signed-off-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Jaime Silvela <jaime.silvela@enterprisedb.com>
Co-authored-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/samples/cluster-example-logical-destination.yaml
+++ b/docs/src/samples/cluster-example-logical-destination.yaml
@@ -22,12 +22,20 @@ spec:
   - name: cluster-example
     connectionParameters:
       host: cluster-example-rw.default.svc
-      # We're using the superuser to allow the publication to be
-      # created directly when connected to the target server.
-      # See cluster-example-logical-source.yaml for more information
-      # about this.
-      user: postgres
+      user: app
       dbname: app
     password:
-      name: cluster-example-superuser
+      name: cluster-example-app
       key: password
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Subscription
+metadata:
+  name: cluster-example-dest-sub
+spec:
+  cluster:
+    name: cluster-example-dest
+  name: sub
+  dbname: app
+  publicationName: pub
+  externalClusterName: cluster-example
