--- a/docs/src/samples/cluster-example-logical-source.yaml
+++ b/docs/src/samples/cluster-example-logical-source.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   instances: 1
 
-  imageName: ghcr.io/cloudnative-pg/postgresql:13
+  imageName: ghcr.io/cloudnative-pg/postgresql:16
 
   storage:
     size: 1Gi
@@ -15,18 +15,30 @@ spec:
       postInitApplicationSQL:
         - CREATE TABLE numbers (i SERIAL PRIMARY KEY, m INTEGER)
         - INSERT INTO numbers (m) (SELECT generate_series(1,10000))
-        - ALTER TABLE numbers OWNER TO app;
+        - ALTER TABLE numbers OWNER TO app
         - CREATE TABLE numbers_two (i SERIAL PRIMARY KEY, m INTEGER)
         - INSERT INTO numbers_two (m) (SELECT generate_series(1,10000))
-        - ALTER TABLE numbers_two OWNER TO app;
-        - CREATE TABLE numbers_three (i SERIAL PRIMARY KEY, m INTEGER)
-        - INSERT INTO numbers_three (m) (SELECT generate_series(1,10000))
-        - ALTER TABLE numbers_three OWNER TO app;
-
-  enableSuperuserAccess: true
+        - ALTER TABLE numbers_two OWNER TO app
+        - CREATE SCHEMA another_schema
+        - ALTER SCHEMA another_schema OWNER TO app
+        - CREATE TABLE another_schema.numbers_three (i SERIAL PRIMARY KEY, m INTEGER)
+        - INSERT INTO another_schema.numbers_three (m) (SELECT generate_series(1,10000))
+        - ALTER TABLE another_schema.numbers_three OWNER TO app
 
   managed:
     roles:
       - name: app
         login: true
         replication: true
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Publication
+metadata:
+  name: cluster-example-pub
+spec:
+  name: pub
+  dbname: app
+  cluster:
+    name: cluster-example
+  target:
+    allTables: true
