--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,6 +11,9 @@ resources:
 - bases/postgresql.cnpg.io_imagecatalogs.yaml
 - bases/postgresql.cnpg.io_clusterimagecatalogs.yaml
 - bases/postgresql.cnpg.io_databases.yaml
+- bases/postgresql.cnpg.io_publications.yaml
+- bases/postgresql.cnpg.io_subscriptions.yaml
+
 # +kubebuilder:scaffold:crdkustomizeresource
 patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
@@ -52,6 +55,17 @@ patches:
 #    kind: CustomResourceDefinition
 #    name: poolers.postgresql.cnpg.io
 #- path: patches/cainjection_in_databases.yaml
+#  target:
+#    kind: CustomResourceDefinition
+#    name: databases.postgresql.cnpg.io
+#- path: patches/cainjection_in_publications.yaml
+#  target:
+#    kind: CustomResourceDefinition
+#    name: publications.postgresql.cnpg.io
+#- path: patches/cainjection_in_subscriptions.yaml
+#  target:
+#    kind: CustomResourceDefinition
+#    name: subscriptions.postgresql.cnpg.io
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
