--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
   - failure_modes.md
   - rolling_update.md
   - replication.md
+  - logical_replication.md
   - backup.md
   - backup_barmanobjectstore.md
   - wal_archiving.md
