--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1519,14 +1519,20 @@ spec:
                               type: string
                             type: array
                           pgDumpExtraOptions:
-                            description: List of options to append to the pg_dump
-                              command
+                            description: |-
+                              List of custom options to pass to the `pg_dump` command. IMPORTANT:
+                              Use these options with caution and at your own risk, as the operator
+                              does not validate their content. Be aware that certain options may
+                              conflict with the operator's intended functionality or design.
                             items:
                               type: string
                             type: array
                           pgRestoreExtraOptions:
-                            description: List of options to append to the pg_restore
-                              command
+                            description: |-
+                              List of custom options to pass to the `pg_restore` command. IMPORTANT:
+                              Use these options with caution and at your own risk, as the operator
+                              does not validate their content. Be aware that certain options may
+                              conflict with the operator's intended functionality or design.
                             items:
                               type: string
                             type: array
