docs: review and add options to tests
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/samples/cluster-import-snapshot-basicauth.yaml
+++ b/docs/src/samples/cluster-import-snapshot-basicauth.yaml
@@ -13,6 +13,10 @@ spec:
           - app
         source:
           externalCluster: cluster-example
+        pgDumpExtraOptions:
+        - '--jobs=2'
+        pgRestoreExtraOptions:
+        - '--jobs=2'
   storage:
     size: 1Gi
   externalClusters:
