--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -165,15 +165,6 @@ spec:
                   rule: self != 'template0'
                 - message: the name template1 is reserved
                   rule: self != 'template1'
-                - message: builtinLocale is only available when localeProvider is
-                    set to `builtin`
-                  rule: '!has(self.builtinLocale) || self.localeProvider == ''builtin'''
-                - message: icuLocale is only available when localeProvider is set
-                    to `icu`
-                  rule: '!has(self.icuLocale) || self.localeProvider == ''icu'''
-                - message: icuRules is only available when localeProvider is set to
-                    `icu`
-                  rule: '!has(self.icuRules) || self.localeProvider == ''icu'''
               owner:
                 description: The owner
                 type: string
@@ -192,6 +183,14 @@ spec:
             - name
             - owner
             type: object
+            x-kubernetes-validations:
+            - message: builtinLocale is only available when localeProvider is set
+                to `builtin`
+              rule: '!has(self.builtinLocale) || self.localeProvider == ''builtin'''
+            - message: icuLocale is only available when localeProvider is set to `icu`
+              rule: '!has(self.icuLocale) || self.localeProvider == ''icu'''
+            - message: icuRules is only available when localeProvider is set to `icu`
+              rule: '!has(self.icuRules) || self.localeProvider == ''icu'''
           status:
             description: |-
               Most recently observed status of the Database. This data may not be up to
