--- a/docs/src/samples/database-example-icu.yaml
+++ b/docs/src/samples/database-example-icu.yaml
@@ -8,9 +8,9 @@ spec:
   name: declarative-icu
   owner: app
   encoding: UTF8
-  locale_provider: icu
-  icu_locale: en
-  icu_rules: fr
+  localeProvider: icu
+  icuLocale: en
+  icuRules: fr
   template: template0
   cluster:
     name: cluster-example
