--- a/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
@@ -5,8 +5,8 @@ metadata:
 spec:
   name: declarative
   owner: app
-  lc_ctype: C
-  lc_collate: C
+  localeCType: C
+  localeCollate: C
   encoding: UTF8
   databaseReclaimPolicy: delete
   cluster:
