--- a/tests/e2e/fixtures/declarative_databases/database.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database.yaml.template
@@ -5,8 +5,8 @@ metadata:
 spec:
   name: declarative
   owner: app
-  lc_ctype: "en_US.utf8"
-  lc_collate: C
+  localeCType: "en_US.utf8"
+  localeCollate: C
   encoding: SQL_ASCII
   template: template0
   cluster:
