--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -61,11 +61,15 @@ spec:
               allowConnections:
                 description: True when connections to this database are allowed
                 type: boolean
-              builtin_locale:
-                description: The BUILTIN_LOCALE (cannot be changed)
+              builtinLocale:
+                description: |-
+                  The BUILTIN_LOCALE (cannot be changed)
+                  Specifies the locale name when the builtin provider is used.
+                  This option requires `localeProvider` to be set to `builtin`.
+                  Available from PostgreSQL 17.
                 type: string
                 x-kubernetes-validations:
-                - message: builtin_locale is immutable
+                - message: builtinLocale is immutable
                   rule: self == oldSelf
               cluster:
                 description: The corresponding cluster
@@ -81,11 +85,11 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              collation_version:
+              collationVersion:
                 description: The COLLATION_VERSION (cannot be changed)
                 type: string
                 x-kubernetes-validations:
-                - message: collation_version is immutable
+                - message: collationVersion is immutable
                   rule: self == oldSelf
               connectionLimit:
                 description: |-
@@ -113,44 +117,57 @@ spec:
                 - present
                 - absent
                 type: string
-              icu_locale:
-                description: The ICU_LOCALE (cannot be changed)
+              icuLocale:
+                description: |-
+                  The ICU_LOCALE (cannot be changed)
+                  Specifies the ICU locale when the ICU provider is used.
+                  This option requires `localeProvider` to be set to `icu`.
+                  Available from PostgreSQL 15.
                 type: string
                 x-kubernetes-validations:
-                - message: icu_locale is immutable
+                - message: icuLocale is immutable
                   rule: self == oldSelf
-              icu_rules:
-                description: The ICU_RULES (cannot be changed)
+              icuRules:
+                description: |-
+                  The ICU_RULES (cannot be changed)
+                  Specifies additional collation rules to customize the behavior of the default collation.
+                  This option requires `localeProvider` to be set to `icu`.
+                  Available from PostgreSQL 16.
                 type: string
                 x-kubernetes-validations:
-                - message: icu_rules is immutable
+                - message: icuRules is immutable
                   rule: self == oldSelf
               isTemplate:
                 description: True when the database is a template
                 type: boolean
-              lc_collate:
-                description: The LC_COLLATE (cannot be changed)
-                type: string
-                x-kubernetes-validations:
-                - message: lc_collate is immutable
-                  rule: self == oldSelf
-              lc_ctype:
-                description: The LC_CTYPE (cannot be changed)
-                type: string
-                x-kubernetes-validations:
-                - message: lc_ctype is immutable
-                  rule: self == oldSelf
               locale:
-                description: The locale (cannot be changed)
+                description: |-
+                  The locale (cannot be changed)
+                  Sets the default collation order and character classification in the new database.
                 type: string
                 x-kubernetes-validations:
                 - message: locale is immutable
                   rule: self == oldSelf
-              locale_provider:
-                description: The locale provider (cannot be changed)
+              localeCType:
+                description: The LC_CTYPE (cannot be changed)
                 type: string
                 x-kubernetes-validations:
-                - message: locale_provider is immutable
+                - message: localeCType is immutable
+                  rule: self == oldSelf
+              localeCollate:
+                description: The LC_COLLATE (cannot be changed)
+                type: string
+                x-kubernetes-validations:
+                - message: localeCollate is immutable
+                  rule: self == oldSelf
+              localeProvider:
+                description: |-
+                  The LOCALE_PROVIDER (cannot be changed)
+                  This option sets the locale provider for databases created in the new cluster.
+                  Available from PostgreSQL 16.
+                type: string
+                x-kubernetes-validations:
+                - message: localeProvider is immutable
                   rule: self == oldSelf
               name:
                 description: The name inside PostgreSQL
@@ -182,6 +199,14 @@ spec:
             - name
             - owner
             type: object
+            x-kubernetes-validations:
+            - message: builtinLocale is only available when localeProvider is set
+                to `builtin`
+              rule: '!has(self.builtinLocale) || self.localeProvider == ''builtin'''
+            - message: icuLocale is only available when localeProvider is set to `icu`
+              rule: '!has(self.icuLocale) || self.localeProvider == ''icu'''
+            - message: icuRules is only available when localeProvider is set to `icu`
+              rule: '!has(self.icuRules) || self.localeProvider == ''icu'''
           status:
             description: |-
               Most recently observed status of the Database. This data may not be up to
