chore: gen docs after typo fix
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -194,7 +194,7 @@ spec:
                 - message: the name template1 is reserved
                   rule: self != 'template1'
               owner:
-                description: The role name of the user who own the database inside
+                description: The role name of the user who owns the database inside
                   PostgreSQL.
                 type: string
               tablespace:
